[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlparse"
description = "A non-validating SQL parser."
authors = [{name = "Andi Albrecht", email = "albrecht.andi@gmail.com"}]
readme = "README.rst"
dynamic = ["version"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Database",
    "Topic :: Software Development",
]
requires-python = ">=3.8"

[project.urls]
Home = "https://github.com/andialbrecht/sqlparse"
Documentation = "https://sqlparse.readthedocs.io/"
"Release Notes" = "https://sqlparse.readthedocs.io/en/latest/changes.html"
Source = "https://github.com/andialbrecht/sqlparse"
Tracker = "https://github.com/andialbrecht/sqlparse/issues"

[project.scripts]
sqlformat = "sqlparse.__main__:main"

[project.optional-dependencies]
dev = [
    "hatch",
    "build",
]
doc = [
    "sphinx",
]

[tool.hatch.version]
path = "sqlparse/__init__.py"

[tool.hatch.envs.default]
dependencies = [
    "coverage[toml]>=6.5",
    "pytest",
    # switch to ruff, but fix problems first
    # but check defaults!
    # https://hatch.pypa.io/1.9/config/static-analysis/#default-settings
    "flake8",
]
[tool.hatch.envs.default.scripts]
unittest = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
    "- coverage combine",
    "coverage report",
]
cov = [
    "test-cov",
    "cov-report",
]
check = "flake8 sqlparse/"
test = ["check", "unittest"]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
    "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:sqlparse tests}"

[tool.coverage.run]
source_pkgs = ["sqlparse", "tests"]
branch = true
parallel = true
omit = [
    "sqlparse/__main__.py",
]

[tool.coverage.paths]
sqlparse = ["sqlparse"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
