[metadata]
name = sqlparse
version = attr: sqlparse.__version__
url = https://github.com/andialbrecht/sqlparse
author = Andi Albrecht
author_email = albrecht.andi@gmail.com
description = A non-validating SQL parser.
long_description = file: README.rst
license = BSD-3-Clause
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Database
    Topic :: Software Development
project_urls =
    Documentation = https://sqlparse.readthedocs.io/
    Release Notes = https://sqlparse.readthedocs.io/en/latest/changes/
    Source = https://github.com/andialbrecht/sqlparse
    Tracker = https://github.com/andialbrecht/sqlparse/issues

[options]
python_requires = >=3.5
packages = find:

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    sqlformat = sqlparse.__main__:main

[tool:pytest]
xfail_strict = True

[flake8]
extend-ignore =
    E731

[coverage:run]
branch = False
omit =
    sqlparse/__main__.py
